--- a/AllworxCall Activity/MainWindow.xaml
+++ b/AllworxCall Activity/MainWindow.xaml
@@ -1,10 +1,12 @@
 ﻿<Window x:Name="frmAllworxCallActivity" x:Class="AllworxCall_Activity.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Allworx Call Activity Invoicing Application" Height="121" Width="571">
+        Title="Allworx Call Activity Invoicing Application" Height="178" Width="574">
     <Grid>
         <Button x:Name="btnOpenRawCallList" Content="Open Html Invoice" HorizontalAlignment="Left" Margin="393,35,0,0" VerticalAlignment="Top" Width="136" Click="btnOpenRawCallList_Click"/>
         <Label x:Name="lblStatus" Content="Waiting for call list to be loaded" HorizontalAlignment="Left" Margin="10,32,0,0" VerticalAlignment="Top" Width="313"/>
+        <Button x:Name="btnOutCheck" Content="Outgoing Check" HorizontalAlignment="Left" Margin="393,80,0,0" VerticalAlignment="Top" Width="136" Click="btnOutCheck_Click"/>
+        <Label x:Name="lblOutCheck" Content="Outgoing check log is being produced" HorizontalAlignment="Left" Margin="10,80,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.079,-0.538" Height="26" Width="313"/>
 
     </Grid>
 </Window>
